# personal

./: .env.example  .gitignore  Cargo.toml  README.md  package.json
migrations/2022-07-21-182242_create_posts/: up.sql
migrations/2022-07-21-222150_hashes/: down.sql  up.sql
src/: main.rs
src/components/: router.ts
src/database/: delete.rs  insert.rs  mod.rs  models.rs  schema.rs  select.rs  update.rs
src/helper/: contact.rs  csp.rs  guards.rs  mod.rs
src/routes/: _middleware.ts  get.rs  handlers.rs  mod.rs  post.rs  static-pages.ts  static_files.rs
src/utils/: jwt.ts
static/: humans.txt  sitemap.xml
static/img/: Carrier-Badge.avif  arosas.avif  dog.avif  drodriguez.avif  jsimpson.avif  jtalamo.avif  logo.avif  satisfaction-guaranteed.avif
static/javascripts/: google-places.js  main.js
static/sass/: style.scss
static/sass/imports/: _base.scss  _main.scss  _media.scss  _settings.scss
static/stylesheets/: noscript.css  style.css  style.css.map
static/stylesheets/imports/: _base.scss  _main.scss  _settings.scss
templates/errors/: default.html.hbs
templates/layouts/: main.html.hbs
templates/pages/: blog.html.hbs  failure.html.hbs  index.html.hbs  success.html.hbs  web.html.hbs
views/: index.pug  layout.pug
views/errors/: error.pug
views/includes/: footer.pug  header.pug
