[package]
name = "template"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rocket = "0.5.0-rc.2"
sentry = "0.27.0"
dotenv = "0.15.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["serve"]